# urgency-prediction-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  gemini_embedding_pipeline.py  main.py  pyproject.toml  voyage_embedding_pipeline.py
dataset/retrieval/: support_tickets_for_rag.csv  support_tickets_for_rag.jsonl
model/: best_logistic_regression.joblib  rag_voyage_embeddings.npy
notebook/: assignment_2.ipynb  ml.ipynb
routers/: analyze.py  ml.py  rag.py  retrieve.py
schemas/: __init__.py  analyze.py  metrics.py  ml.py  rag.py  retrieve.py
services/: __init__.py  analysis_service.py  evaluation_service.py  generation_service.py  logging_service.py  ml_service.py  retrieval_service.py
